# STAT-agent

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  start_web.sh  web_interface.py
.claude/skills/alignment-STalign/: SKILL.md
.claude/skills/cell-communication-CellPhoneDB/: SKILL.md
.claude/skills/cell-communication-LIANA[STABLE]/: SKILL.md
.claude/skills/celltype-annotation-GPT/: SKILL.md
.claude/skills/celltype-annotation-GPT/celltype_fast/: __init__.py  annotation_clustering.py
.claude/skills/celltype-annotation-scANVI/: SKILL.md
.claude/skills/celltype-annotation-scANVI/celltype_scvi/: __init__.py  annotation_scvi.py
.claude/skills/celltype-deconvolution-RCTD/: SKILL.md
.claude/skills/celltype-deconvolution-RCTD/deconv_rctd/: RCTD.py  __init__.py
.claude/skills/integration-Harmony/: SKILL.md
.claude/skills/niche-detection-Harmonics/: SKILL.md
.claude/skills/niche-detection-Harmonics/niche_analysis_lib/: __init__.py  hypo_test.py  model.py  utils.py
.claude/skills/pathway-GO-enrichment/: SKILL.md
.claude/skills/spatial-domain-SpaGCN/: SKILL.md
.claude/skills/spatial-stats-neighborhood-enrichment/: SKILL.md
.claude/skills/svg-SpatialDE/: SKILL.md
examples/: README.md  demo_spatial_agent.py  test_prompt_logger.py
scripts/: gen_skills_table.py
stat_agent/: __init__.py
stat_agent/agent/: __init__.py  clarification_context.py  conversation_orchestrator.py  error_reflection.py  executor.py  llm_backend.py  memory.py  model_config.py  notebook_logger.py  pipeline_executor.py  prompt_logger.py  query_planner.py  skill_filter.py  skill_registry.py  skill_verifier.py  spatial_agent_core.py  tools.py
stat_agent/core/: __init__.py  data_slice.py  roi_manager.py  session.py
stat_agent/functions/: __init__.py  io.py
stat_agent/skills/alignment-STalign/: SKILL.md
stat_agent/skills/annotation-tangram/: SKILL.md
stat_agent/skills/cell-communication-CellPhoneDB/: SKILL.md
stat_agent/skills/cell-communication-LIANA/: SKILL.md
stat_agent/skills/celltype-annotation-GPT/: SKILL.md
stat_agent/skills/celltype-annotation-scANVI/: SKILL.md
stat_agent/skills/celltype-deconvolution-RCTD/: SKILL.md
stat_agent/skills/celltype-deconvolution-RCTD/deconv_rctd/: RCTD.py  data_utils.py
stat_agent/skills/deconvolution-cell2location/: SKILL.md
stat_agent/skills/deconvolution-flashdeconv/: SKILL.md
stat_agent/skills/integration-Harmony/: SKILL.md
stat_agent/skills/integration-bbknn/: SKILL.md
stat_agent/skills/integration-scanorama/: SKILL.md
stat_agent/skills/niche-detection-Harmonics/: SKILL.md
stat_agent/skills/pathway-GO-enrichment/: SKILL.md
stat_agent/skills/pathway-enrichment-compare/: SKILL.md
stat_agent/skills/registration-paste/: SKILL.md
stat_agent/skills/spatial-domain-SpaGCN/: SKILL.md
stat_agent/skills/spatial-statistics-squidpy/: SKILL.md
stat_agent/skills/spatial-stats-neighborhood-enrichment/: SKILL.md
stat_agent/skills/svg-SpatialDE/: SKILL.md
stat_agent/skills/trajectory-palantir-dpt/: SKILL.md
stat_agent/web/: app.py
stat_agent/web/static/css/: style.css
stat_agent/web/static/js/: app.js
stat_agent/web/templates/: index.html
static/js/: app.js
templates/: index.html
tests/: test_celltype_optional.py  test_llm_skill_matching.py  test_new_pipeline.py  test_niche_detection_integration.py
tests/multiomics_test/: README.md  coad.ipynb
tests/multiple_slice_test/: README.md
tests/single_slice_test/: README.md
tests/skills/: test_celltype_annotation.py  test_celltype_annotation_fast.py
tests/test_celltype_annotation/: annotation_scvi.ipynb
