[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-agent"
version = "0.1.12"
description = "STAT: Spatial Transcriptomics Analytical agenT - AI-powered platform for spatial omics analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    {name = "Yihang Chen", email = "ychenlp@connect.ust.hk"},
]
keywords = [
    "spatial transcriptomics",
    "single-cell",
    "agent",
    "AI",
    "bioinformatics",
    "anndata",
    "scanpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Data
    "numpy>=1.21",
    "pandas>=1.3",
    "anndata>=0.9",
    "scipy>=1.7",
    "scanpy>=1.9",

    # Spatial
    "geopandas>=0.10",
    "shapely>=2.0",

    # Imaging
    "pillow>=9.0",
    "tifffile>=2021.0",

    # Visualization
    "matplotlib>=3.5",
    "seaborn>=0.11",

    # Web
    "flask>=3.0",

    # LLM providers
    "anthropic>=0.18",
    "openai>=1.12",

    # Config
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# All analysis skill dependencies
skills = [
    # Neighborhood enrichment, LIANA spatial neighbors
    "squidpy>=1.2",

    # GO enrichment
    "gseapy>=1.0",

    # Cell communication
    "liana",
    "cellphonedb>=5.0,<6.0",
    "plotnine>=0.12",           # LIANA visualization

    # Batch integration
    "harmonypy>=0.0.9",

    # Cell type annotation (scANVI)
    "scvi-tools>=1.0,<2.0",

    # Deconvolution (RCTD)
    "qpsolvers>=4.0",
    "ray>=2.0",

    # Spatially variable genes
    "NaiveDE>=0.1",
    "SpatialDE>=1.1",

    # Clustering / graph
    "scikit-misc>=0.5",
    "igraph>=0.9",

    # Spatial domains (SpaGCN) + alignment (STalign)
    "torch>=2.0",
    "SpaGCN>=1.2.5",
    "pynrrd>=1.0",
]

# Development
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[project.scripts]
stat-web = "stat_agent.web.app:main"

[project.urls]
Homepage = "https://github.com/chenyhvvvv/STAT-agent"
Repository = "https://github.com/chenyhvvvv/STAT-agent"
"Bug Tracker" = "https://github.com/chenyhvvvv/STAT-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["stat_agent*"]
exclude = ["tests*", "docs*", "external*", "paper*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.yml"]
"stat_agent.web" = ["templates/**/*", "static/**/*"]
"stat_agent.skills" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
