[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-agent"
version = "0.1.23"
description = "STAT: Spatial Transcriptomics Analytical agenT - AI-powered platform for spatial omics analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    {name = "Yihang Chen", email = "ychenlp@connect.ust.hk"},
]
keywords = [
    "spatial transcriptomics",
    "single-cell",
    "agent",
    "AI",
    "bioinformatics",
    "anndata",
    "scanpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Data
    "numpy>=1.21",
    "pandas>=1.3",
    "anndata>=0.9",
    "scipy>=1.7",
    "scanpy>=1.9",

    # Spatial
    "geopandas>=0.10",
    "shapely>=2.0",

    # Imaging
    "pillow>=9.0",
    "tifffile>=2021.0",

    # Visualization
    "matplotlib>=3.5",
    "seaborn>=0.11",

    # Web
    "flask>=3.0",

    # LLM providers
    "anthropic>=0.18",
    "openai>=1.12",

    # Config
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# All analysis skill dependencies
skills = [
    # Spatial statistics & neighborhood enrichment
    "squidpy>=1.2",
    "esda>=2.4.0",

    # Enrichment (GO, ORA, ssGSEA)
    "gseapy>=1.0",

    # Cell communication
    "liana",
    "cellphonedb>=5.0,<6.0",
    "plotnine>=0.12",           # LIANA visualization

    # Batch integration (Harmony, BBKNN, Scanorama)
    "harmonypy>=0.0.9",
    "bbknn>=1.5.0",
    "scanorama>=1.7.0",

    # Cell type annotation (scANVI, Tangram)
    "scvi-tools>=1.0,<2.0",
    "tangram-sc>=1.0.0",

    # Deconvolution (RCTD, FlashDeconv, Cell2location)
    "qpsolvers>=4.0",
    "ray>=2.0",
    "flashdeconv>=0.1.0",
    "cell2location>=0.1.4",

    # Trajectory / pseudotime (Palantir)
    "palantir>=1.0.0",

    # CNV inference
    "infercnvpy>=0.4.0",

    # Spatially variable genes
    "NaiveDE>=0.1",
    "SpatialDE>=1.1",

    # Clustering / graph (pin igraph<1.0 for louvain compatibility)
    "scikit-misc>=0.5",
    "igraph>=0.9,<1.0",

    # Spatial domains (SpaGCN, STAGATE, GraphST) + alignment (STalign)
    "torch>=2.0",
    "SpaGCN>=1.2.5",
    "GraphST>=1.1.0",
    # STAGATE_pyG: pip install git+https://github.com/QIFEIDKN/STAGATE_pyG.git
    # Also needs: torch_geometric, torch_sparse, torch_scatter (from PyG wheels)

    # Slice registration (PASTE)
    "paste-bio>=1.0.0",
    "POT>=0.9.0,<0.9.6",       # 0.9.6 breaks PASTE line_search API

    "pynrrd>=1.0",
]

# Development
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[project.scripts]
stat-web = "stat_agent.web.app:main"

[project.urls]
Homepage = "https://github.com/chenyhvvvv/STAT-agent"
Repository = "https://github.com/chenyhvvvv/STAT-agent"
"Bug Tracker" = "https://github.com/chenyhvvvv/STAT-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["stat_agent*"]
exclude = ["tests*", "docs*", "external*", "paper*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.yml"]
"stat_agent.web" = ["templates/**/*", "static/**/*"]
"stat_agent.skills" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
